# claude-automation-template

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  package.json  pyproject.toml  setup.sh
.claude/: settings.json
.claude/agents/: code-reviewer.md
.claude/hooks/: drop-superseded-ci-events.mjs  lib-checks.sh  pre-push-check.sh  safe-launch-parse.py  (+2 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  workflow-secrets.txt
.hooks/: lint-skills.sh  pre-commit  pre-push
config/: pr-review-paths.json
docs/: portability-usability-analysis.md
org-bootstrap/: README.md  bootstrap.sh  config.example.sh
scripts/: version-bump.test.mjs
tests/: _helpers.py  check-proto-pollution.test.mjs  conftest.py  test_bash_antipattern_check.py  test_check_claude_execution.py  test_check_doc_line_refs.py  test_check_drift_guards.py  test_check_flag_arity_guard.py  test_check_graceful_handwave.py  test_check_historical_comments.py  test_check_hook_timeouts.py  test_check_oauth_fallback.py  test_check_symlinks.py  test_check_test_repo_root.py  test_check_token_scope.py  test_claude_hooks.py  test_drop_superseded_ci_events.py  test_fetch_security_report.py  test_git_hooks.py  test_lib_checks.py  test_lint_skills.py  test_parallelism_nudge.py  test_paths_changed.py  test_phone_home_extract.py  test_phone_home_submit.py  test_promote_changelog.py  test_release_canary.py  test_required_env.py  test_safe_launch.py  test_script_configured.py  test_supervision_gate.py  test_template_sync.py  test_validate_config.py  test_version_sync.py
(+59 files in other folders)
